--- a/data/equipment/consumable-14-vDgDrbSoGuiUIz2R.htm
+++ b/data/equipment/consumable-14-vDgDrbSoGuiUIz2R.htm
@@ -1,11 +1,10 @@
 Name: Potion of Acid Resistance (Greater)
-Nom: Potion de résistance à l'acide (supérieure)
-État: changé
-État d'origine: officielle
+Nom: Potion de résistance à l'acide (supérieur)
+État: officielle
 
 ------ Description (en) ------
 <p>Drinking this thick, fortifying potion grants resistance 15 against acid damage for 1 hour.</p>
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 ------ Description (fr) ------
 <p><span>En buvant cette épaisse potion fortifiante, vous gagnez une résistance de 15 contre des dégâts d'acide pendant 1 heure.</span></p>
-<p><span><strong>Activation</strong>&nbsp;<span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span>Interagir</span></p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
