--- a/data/equipment/consumable-11-8GEsRsQAdDljRT1s.htm
+++ b/data/equipment/consumable-11-8GEsRsQAdDljRT1s.htm
@@ -1,7 +1,6 @@
 Name: Hunger Oil
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Huile de la faim
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">1</span> Interact;</p>
@@ -16,14 +15,14 @@ Nom:
 <hr />
 <p><strong>Craft Requirements</strong> Supply one casting of @Compendium[pf2e.spells-srd.JhRuR7Jj3ViShpq7]{Ghoulish Cravings}.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Interact;</p>
-<p>Obtenue à partir de la graisse de créatures mortes-vivantes corporelles et imprégnée de magie macabre, cette huile jaunâtre provoque chez ses victimes une sensation de faim lancinante que seule la chair vivante peut apaiser. Si vous mangez au moins une bouchée de chair humanoïde, vous ignorez la condition @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled} de l'huile de la faim pendant 1 minute. Sous l'effet de l'huile de la faim, vous récupérez deux fois moins de points de vie grâce aux effets de soins, à moins que vous n'ayez mangé au moins une bouchée de chair humanoïde au cours de la dernière minute.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
+<p>Obtenue à partir de la graisse de corps de créatures mortes-vivantes et imprégnée de magie goule, cette huile jaunâtre provoque chez ses victimes une sensation de faim lancinante que seul l'ingestion de chair vivante peut apaiser. Si vous mangez au moins une bouchée de chair humanoïde, vous ignorez la condition @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} de l'huile de la faim pendant 1 minute. Sous l'effet de l'huile de la faim, vous récupérez deux fois moins de points de vie sous les effets de soins, à moins que vous n'ayez mangé au moins une bouchée de chair humanoïde au cours de la dernière minute.</p>
 <hr />
-<p><strong>Jet de sauvegarde</strong> DC 30 Fortitude;</p>
-<p><strong>Début</strong> 1 minute;</p>
-<p><strong>Durée maximale</strong> 6 minutes;</p>
-<p><strong>Phase 1</strong> affaiblie 2 (1 minute);</p>
-<p><strong>Stade 2</strong> affaibli 3 (1 minute);</p>
-<p><strong>Stade 3</strong> affaibli 4 (1d4 minutes)</p>
+<p><strong>Jet de sauvegarde</strong> DD 30 Vigueur</p>
+<p><strong>Début</strong> 1 minute.</p>
+<p><strong>Durée maximale</strong> 6 minutes.</p>
+<p><strong>Stade 1</strong> Affaibli 2 (1 minute);</p>
+<p><strong>Stade 2</strong> Affaibli 3 (1 minute);</p>
+<p><strong>Stade 3</strong> Affaibli 4 (1d4 minutes)</p>
 <hr />
-<p><strong>Exigences d'artisanat</strong> Fournissez une distribution de @Compendium[pf2e.spells-srd.JhRuR7Jj3ViShpq7]{Forces macabres}.</p>
+<p><strong>Condition de fabrication</strong> Fournissez un sort de @Compendium[pf2e.spells-srd.JhRuR7Jj3ViShpq7]{Désirs macabres}.</p>
