--- a/data/equipment/consumable-05-JAOWw2GhupaYoYg9.htm
+++ b/data/equipment/consumable-05-JAOWw2GhupaYoYg9.htm
@@ -12,7 +12,7 @@ Nom: Élixir Six-doigts (inférieur)
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">1</span> Interagir</p>
 <p>Ce liquide granuleux et épicé vous fait pousser un sixième doigt à chaque main et vous confère une préhension semblable à celle d'une araignée.</p>
-<p>Vous gagnez un bonus de +2 à votre DC de Réflexes pour ne pas être @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmé} et une vitesse d'@Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Escalade}. de 6 mètres pour la durée indiquée.</p>
+<p>Vous gagnez un bonus de +2 à votre DD de Réflexes pour ne pas être @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmé} et une vitesse d'@Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Escalade} de 6 mètres pour la durée indiquée.</p>
 <hr />
 <p><strong>Durée</strong> 10 minutes.</p>
 <p>@Compendium[pf2e.consumable-effects.XrlChFETfe8avLsX]{Effet: Elixir Six-doigts (inférieur)}</p>
