--- a/data/equipment/consumable-03-mj9i9GeQTADByNPZ.htm
+++ b/data/equipment/consumable-03-mj9i9GeQTADByNPZ.htm
@@ -1,7 +1,6 @@
 Name: Juggernaut Mutagen (Moderate)
 Nom: Mutagène de juggernaut (modéré)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,7 +11,7 @@ Nom: Mutagène de juggernaut (modéré)
 <p><strong>Duration</strong> 10 minute.</p>
 <p>@Compendium[pf2e.consumable-effects.fUrZ4xcMJz0CfTyG]{Effect: Juggernaut Mutagen (Moderate)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr />
 Après avoir bu ce mutagène, votre corps devient plus imposant et robuste. Vous rayonnez de santé, mais vous devenez lourdaud et peu observateur. 
 <p><strong>Avantage</strong> Vous gagnez un bonus d’objet aux jets de Vigueur de +2 ainsi que 10 de points de vie temporaires. Lorsque vous possédez votre maximum de points de vie depuis 1 minute complète, vous récupérez les points de vie temporaires
