--- a/data/equipment/consumable-01-xE0EdDrf734l2fQH.htm
+++ b/data/equipment/consumable-01-xE0EdDrf734l2fQH.htm
@@ -1,7 +1,6 @@
 Name: Juggernaut Mutagen (Lesser)
 Nom: Mutagène de Juggernaut (inférieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -12,10 +11,9 @@ Nom: Mutagène de Juggernaut (inférieur)
 <p><strong>Duration</strong> 1 minute.</p>
 <p>@Compendium[pf2e.consumable-effects.1l139A2Qik4lBHKO]{Effect: Juggernaut Mutagen (Lesser)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
-<hr>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <p>Après avoir bu ce mutagène, votre corps devient plus imposant et robuste. Vous rayonnez de santé, mais vous devenez lourdaud et peu observateur.</p>
 <p><strong>Avantage</strong> Vous gagnez un bonus d’objet aux jets de Vigueur de +1 ainsi que 5 points de vie temporaires. Lorsque vous possédez votre maximum de points de vie depuis 1 minute complète, vous récupérez les points de vie temporaires.
 <p><strong>Inconvénient</strong> Vous subissez un malus de −2 aux jets de Volonté et d’initiative et aux tests de Perception. 
 <p><strong>Durée</strong> 1 minute.</p>
-<p>@Compendium[pf2e.spell-effects.1l139A2Qik4lBHKO]{Effet: Mutagène de Juggernaut (Inférieur)}</p>
+<p>@Compendium[pf2e.spell-effects.1l139A2Qik4lBHKO]{Effet: Mutagène de Juggernaut (inférieur)}</p>
