--- a/data/equipment/consumable-11-TMtQnY6yvIRCpK9v.htm
+++ b/data/equipment/consumable-11-TMtQnY6yvIRCpK9v.htm
@@ -1,6 +1,6 @@
 Name: Juggernaut Mutagen (Greater)
-Nom: 
-État: auto-trad
+Nom: Mutagène de juggernaut (supérieur)
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong><span class="pf2-icon">1</span> Interact</p>
@@ -13,8 +13,9 @@ Nom:
 ------ Description (fr) ------
 <p><strong>Activate</strong><span class="pf2-icon">1</span>  Interact</p> 
 <hr /> 
-<p>Après avoir bu ce mutagène, ton corps devient épais et robuste. Vous affichez une bonne mine, mais vous avez tendance à être lourd et peu attentif.</p> 
-<p><strong>Avantage</strong>  Vous gagnez un bonus de +3 aux sauvegardes de Force et 30 points de vie temporaires. Chaque fois que vous êtes au maximum des points de vie pendant au moins 1 minute complète, vous regagnez les points de vie temporaires. Lorsque vous obtenez un succès à un sauvetage de Force, vous obtenez un succès critique à la place.</p> 
-<p><strong>Drawback</strong>  Vous subissez une pénalité de -2 aux sauvegardes de Volonté, aux contrôles de Perception et aux jets d'initiative.</p> 
-<p><strong>Durée</strong>  1 heure.</p> 
-<p>@Compendium[pf2e.consumable-effects.xLilBqqf34ZJYO9i]{Effet : Juggernaut Mutagen (Greater)}</p> 
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p>Après avoir bu ce mutagène, votre corps devient plus imposant et robuste. Vous rayonnez de santé, mais vous devenez lourdaud et peu observateur.</p>
+<p><strong>Avantage</strong> Vous gagnez un bonus d’objet aux jets de Vigueur de +3 ainsi que 30 points de vie temporaires. Lorsque vous possédez votre maximum de points de vie depuis 1 minute complète, vous récupérez les points de vie temporaires.
+<p><strong>Inconvénient</strong> Vous subissez un malus de −2 aux jets de Volonté et d’initiative et aux tests de Perception. 
+<p><strong>Durée</strong> 1 heure.</p>
+<p>@Compendium[pf2e.spell-effects.1l139A2Qik4lBHKO]{Effet: Mutagène de Juggernaut (supérieur)}</p>
