--- a/data/classfeatures/oracle-01-PRJYLksQEwT39bTl.htm
+++ b/data/classfeatures/oracle-01-PRJYLksQEwT39bTl.htm
@@ -1,7 +1,6 @@
 Name: Mystery
 Nom: Mystère
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Choose the divine mystery that fuels your mystical power.</p>
@@ -17,7 +16,7 @@ Nom: Mystère
 <p><strong>Related Domains</strong> These are the cleric domains associated with your mystery. You select one initial domain spell from one of these domains at 1st level, which you can cast as a revelation spell with the cursebound trait. The domains and their domain spells appear on page 441 of the Core Rulebook.</p>
 ------ Description (fr) ------
 <p>Choisissez le mystère divin d’où proviennent vos pouvoirs mystiques. Votre mystère pourrait représenter une dévotion panthéistique envers toutes les divinités dont le champ d’actions s’étend au sujet de votre mystère, la vénération d’un idéal spécifique, ou un lien avec de l’énergie divine à l’état brut. Quelles que soient son origine et sa nature, votre mystère détermine les sorts de révélation que vous pouvez lancer et la malédiction d’oracle qui s’empare de votre corps quand vous le faites. Vous apprenez des sorts relatifs à votre mystère, gagnez accès à un tour de magie et obtenez un avantage spécial grâce à la combinaison de vos connaissances divines et de l’expérience pratique de votre mystère.</p>
-<hr>
+<hr />
 <h3>Lire une description de mystère</h3>
 <p>Une description de mystère comprend les informations ci-dessous et est suivie de détails sur la malédiction du mystère.</p>
 <p><strong>Avantage de mystère</strong> L’avantage du mystère est une capacité spéciale (ou des capacités spéciales) que vous gagnez grâce à votre mystère.</p>
