--- a/data/classfeatures/oracle-01-o1gGG36wpn9mxeop.htm
+++ b/data/classfeatures/oracle-01-o1gGG36wpn9mxeop.htm
@@ -1,7 +1,6 @@
 Name: Life Mystery
 Nom: Mystère de la vie
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>The never-ending flow of positive energy within living beings is palpable to you. You might uphold the sanctity of life, or perhaps you seek to undermine it. You might draw power from the collective vitality of the world's living creatures, hold some connection to the Positive Energy Plane, or revere a collection of deities including Irori, Pharasma, Sarenrae, and the god of medicine Qi Zhong.</p>
@@ -36,11 +35,22 @@ Nom: Mystère de la vie
 <p><strong>Avantage du mystère </strong>Votre corps est un profond réservoir d’énergie vitale. À chaque niveau, vous gagnez un nombre de Points de Vie égal à 10 + votre modificateur de Constitution grâce à la classe d’oracle, au lieu de 8 + votre modificateur de Constitution.</p>
 <p><strong>Compétence qualifiée</strong> Médecine</p>
 <p><strong>Tour de magie accordé</strong> @Compendium[pf2e.spells-srd.SnjhtQYexDtNDdEg]{Stabilisation}</p>
-<p><strong>Sorts de révélation</strong> initial: @Compendium[pf2e.spells-srd.2gQYrCPwBmwau26O]{Lien vital}; avancé: @Compendium[pf2e.spells-srd.ziHDISWkFSwz3pmn]{Retarder l'affliction}; supérieur: @Compendium[pf2e.spells-srd.9kOI14Jep97TzGO7]{Forme génératrice de vie}</p>
+<p><strong>Sorts de révélation</strong></p>
+<ul>
+<li>initial : @Compendium[pf2e.spells-srd.2gQYrCPwBmwau26O]{Lien vital};</li>
+<li>avancé : @Compendium[pf2e.spells-srd.ziHDISWkFSwz3pmn]{Retarder l'affliction};</li> 
+<li>supérieur : @Compendium[pf2e.spells-srd.9kOI14Jep97TzGO7]{Forme génératrice de vie}</li>
+</ul> 
 <p><strong>Domaines liés</strong>mort, soins</p>
 <h3>Malédiction de la vie déversée</h3>
 <p>Les énergies de la vie jaillissent de vous et vous connectent avec toutes les créatures vivantes mais vous dépensez votre énergie vitale pour ce faire. Votre présence réconforte les malades et les blessés, fait légèrement disparaître les cicatrices, fait pousser les plantes et accorde de la vitalité à tout ce qui vous entoure.</p>
-<p><strong>Malédiction mineure</strong> Avec votre énergie vitale qui s’écoule de votre corps, il est de plus en plus difficile de faire en sorte que celui-ci continue à fonctionner. Les effets qui restaurent des Points de Vie subissent un malus de statut égal à la moitié de votre niveau (avec un minimum de 1) sur le nombre de Points de Vie que vous récupérez.</p>
-<p><strong>Malédiction modérée</strong> L’énergie vitale continue à s’écouler de vous et ce phénomène ne peut pas être renversé. En plus des effets de votre malédiction mineure, vous ne pouvez pas être soigné par des effets magiques provenant d’autres créatures. Cependant, si vous êtes inconscients, les effets magiques peuvent vous ramener à 1 PV (mais pas plus). Vous êtes affecté normalement par les élixirs de vie, les potions et les autres objets. Quand vous lancez @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{guérison} et que vous toutes vos cibles sont des créatures vivantes, vous lancez des d12 au lieu de d8 pour déterminer la quantité de Points de Vie soignés.</p>
+<h4>Malédiction mineure</h4>
+<p>Avec votre énergie vitale qui s’écoule de votre corps, il est de plus en plus difficile de faire en sorte que celui-ci continue à fonctionner. Les effets qui restaurent des Points de Vie subissent un malus de statut égal à la moitié de votre niveau (avec un minimum de 1) sur le nombre de Points de Vie que vous récupérez.</p>
+<p>@Compendium[pf2e.feature-effects.yR4XFhh3irGBgPmJ]{Effet: Malédiction mineure de la vie}</p>
+<h4>Malédiction modérée</h4>
+<p>L’énergie vitale continue à s’écouler de vous et ce phénomène ne peut pas être renversé. En plus des effets de votre malédiction mineure, vous ne pouvez pas être soigné par des effets magiques provenant d’autres créatures. Cependant, si vous êtes inconscients, les effets magiques peuvent vous ramener à 1 PV (mais pas plus). Vous êtes affecté normalement par les élixirs de vie, les potions et les autres objets. Quand vous lancez @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{guérison} et que vous toutes vos cibles sont des créatures vivantes, vous lancez des d12 au lieu de d8 pour déterminer la quantité de Points de Vie soignés.</p>
 <p>Chaque fois que vous terminez de lancer un sort qui n’est pas un tour de magie, vous restaurez un nombre de Points de Vie égal au niveau du sort. Vous choisissez la cible qui peut être la cible du sort ou la créature la plus proche de vous. Cela ne vous permet pas de vous soigner vous-même. Ce soin possède les traits Guérison, Nécromancie et Positif ainsi que le trait de la tradition du sort.</p>
-<p><strong>Malédiction majeure (11e)</strong> L’énergie vitale jaillit violemment de vous pour donner corps à votre magie. Certains de vos sorts véhiculent de l’énergie positive. Chaque fois que vous utilisez un emplacement de sort pour lancer un sort de niveau 5 ou supérieur qui prend 2 actions ou plus à lancer, vous dispersez de l’énergie positive dans une explosion de 9 m qui a les mêmes effets qu’un sort de @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{guérison} à 3 actions lancé à un niveau égal au niveau du sort lancé –4. Cette guérison prend effet immédiatement après la fin du Lancement du sort. Vous ne profitez pas de cette guérison. Au lieu de cela, vous perdez le double du nombre de Points de Vie obtenu pour le sort de guérison.</p>
+<p>@Compendium[pf2e.feature-effects.9GIlMB09zKCsnuBP]{Effet: Malédiction modérée de la vie}</p>
+<h4>Malédiction majeure (11e)</h4>
+<p>L’énergie vitale jaillit violemment de vous pour donner corps à votre magie. Certains de vos sorts véhiculent de l’énergie positive. Chaque fois que vous utilisez un emplacement de sort pour lancer un sort de niveau 5 ou supérieur qui prend 2 actions ou plus à lancer, vous dispersez de l’énergie positive dans une explosion de 9 m qui a les mêmes effets qu’un sort de @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{guérison} à 3 actions lancé à un niveau égal au niveau du sort lancé –4. Cette guérison prend effet immédiatement après la fin du Lancement du sort. Vous ne profitez pas de cette guérison. Au lieu de cela, vous perdez le double du nombre de Points de Vie obtenu pour le sort de guérison.</p>
+<p>@Compendium[pf2e.feature-effects.KTNjMlO3WZFx7Suj]{Effet: Malédiction majeure de la vie}</p>
