--- a/data/equipment/consumable-03-SLJTJwyIRjuWjfuK.htm
+++ b/data/equipment/consumable-03-SLJTJwyIRjuWjfuK.htm
@@ -14,5 +14,5 @@ Nom: Mutagène d'Énergie (modéré)
 <hr />
 <p>Lorsqu'il est créé, ce mutagène est accordé à l'un des quatre types d'énergie suivants : acide, froid, électricité ou feu. Lorsqu'il est consommé, le mutagène imprègne votre corps d'une énergie qui se répand à chaque attaque. A des niveaux plus élevés, il peut même vous donner la capacité de libérer l'énergie en rafales contrôlées.</p>
 <p><strong>Avantage</strong> Vous gagnez une résistance de 10 au type d'énergie accordée. Chaque fois que vous touchez avec une arme de mêlée, ajoutez [[/r 1d4]] point de dégâts au type d'énergie accordé.</p>
-<p><strong>Désavantage</strong> Vous gagnez une faiblesse de 5 aux trois autres types d'énergie.</p>
+<p><strong>Inconvénient</strong> Vous gagnez une faiblesse de 5 aux trois autres types d'énergie.</p>
 <p><strong>Durée</strong> 10 minutes.</p>
