--- a/data/equipment/consumable-17-ccrdVliTNBh2mNZf.htm
+++ b/data/equipment/consumable-17-ccrdVliTNBh2mNZf.htm
@@ -11,13 +11,11 @@ Nom: Mutagène de sérénité (majeur)
 <p><strong>Duration</strong> 1 hour.</p>
 <p>@Compendium[pf2e.consumable-effects.t7VUJHSUT6bkVUjg]{Effect: Serene Mutagen (Major)}</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact</p>
-<hr />
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interagir</p>
 <hr>
 <p>Vous gagnez en sérénité intérieure, vous concentrant sur les détails et renforçant votre esprit contre les assauts mentaux, mais la violence vous rebute.</p>
 <p><strong>Avantage</strong> Vous gagnez un bonus d’objet de +4 aux jets de Volonté et aux tests de Perception, Médecine, Nature, Religion et Survie. Quand vous obtenez un succès sur un jet de Volonté contre un effet mental, vous remportez à la place un succès critique tandis que vos échecs critiques sur les jets de Volonté contre un effet mental deviennent de simples échecs.</p>
 <p><strong>Inconvénient</strong> Vous subissez un malus de −1 aux jets d’attaque et au DD des sorts offensifs et un malus de −1 par dé de dégâts aux dégâts des armes, des attaques à mains nues et des sorts</p>
 <p><strong>Durée</strong> 1 heure</p>
-<p>@Compendium[pf2e.consumable-effects.yrbz0rZzp8aZEqbv]{Effet: Mutagène de sérénité (modéré)}</p>
+<p>@Compendium[pf2e.consumable-effects.yrbz0rZzp8aZEqbv]{Effet: Mutagène de sérénité (majeur)}</p>
 
