--- a/data/equipment/consumable-12-8uyRlAkWdEyfOziq.htm
+++ b/data/equipment/consumable-12-8uyRlAkWdEyfOziq.htm
@@ -1,7 +1,6 @@
 Name: Mage Bane
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Fléau du mage
+État: libre
 
 ------ Description (en) ------
 <p>Upon being mixed and injected into the bloodstream, this powder of the crimson orchid quickly assaults the brain and nerves, disrupting the victim's ability to piece together coherent thoughts and spells.</p>
@@ -13,11 +12,11 @@ Nom:
 <p><strong>Stage 2</strong> <a class="inline-roll roll" data-mode="roll" data-flavor="mental" data-formula="3d6" title="mental"><i class="fas fa-dice-d20"></i> 3d6</a> mental damage and stupefied 3 (1 round)</p>
 <p><strong>Stage 3</strong> <a class="inline-roll roll" data-mode="roll" data-flavor="mental" data-formula="4d6" title="mental"><i class="fas fa-dice-d20"></i> 4d6</a> mental damage and stupefied 4 (1 round)</p>
 ------ Description (fr) ------
-Après avoir été mélangée et injectée dans le sang, cette poudre d'orchidée pourpre attaque rapidement le cerveau et les nerfs, perturbant la capacité de la victime à rassembler des pensées cohérentes et des sorts ;
+Après avoir été mélangée et injectée dans le sang, cette poudre d'orchidée pourpre attaque rapidement le cerveau et les nerfs, perturbant la capacité de la victime à rassembler des pensées cohérentes et des sorts.
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">T</span> Interact (Injury)</p>
-<p><strong>Jet de sauvegarde</strong> DC 32 Force</p>
+<p><strong>Activation</strong> <span class="pf2-icon">T</span> Interagir (Blessure)</p>
+<p><strong>Jet de sauvegarde</strong> DD 32 Vigueur</p>
 <p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stage 1</strong> <a class="inline-roll roll" ; data-mode="roll" ; data-flavor="mental" ; data-formula="2d6" ; title="mental"><i class="fas fa-dice-d20"></i> 2d6</a> dégâts mentaux et @Compendium [pf2e. conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 2 (1 round)</p>
-<p><strong>Stage 2</strong> <a class="inline-roll roll" ; data-mode="roll" ; data-flavor="mental" ; data-formula=" ; 3d6" ; title="mental"><i class="fas fa-dice-d20"></i> 3d6</a> dégâts mentaux et stupeur 3 (1 round)</p>
-<p><strong>Stage 3</strong> <a class="inline-roll roll" ; data-mode="roll" ; data-flavor="mental" ; data-formula=" ; 4d6" ; title="mental"><i class="fas fa-dice-d20"></i> 4d6</a> dégâts mentaux et stupeur 4 (1 round)</p>
+<p><strong>Stade 1</strong>  2d6 points de dégâts mentaux et @Compendium [pf2e. conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 2 (1 round)</p>
+<p><strong>Stade 2</strong>  3d6 points de dégâts mentaux et Stupéfié 3 (1 round)</p>
+<p><strong>Stade 3</strong>  4d6 points de dégâts mentaux et Stupéfié 4 (1 round)</p>
