--- a/data/equipment/consumable-14-ywYt2SyZaV95KcZH.htm
+++ b/data/equipment/consumable-14-ywYt2SyZaV95KcZH.htm
@@ -1,5 +1,5 @@
 Name: Potion of Resistance (Greater)
-Nom: Potion de résistance (inférieure)
+Nom: Potion de résistance (supérieure)
 État: libre
 
 ------ Description (en) ------
