--- a/data/equipment/consumable-06-V2TUEoiDwJ125qzN.htm
+++ b/data/equipment/consumable-06-V2TUEoiDwJ125qzN.htm
@@ -1,7 +1,6 @@
 Name: Potion of Resistance (Lesser)
 Nom: Potion de résistance (inférieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><span>Drinking this thick, fortifying potion grants 5 resistance against a single damage type for 1 hour. Each <em>potion of resistance</em> is created to defend against acid, cold, electricity, fire, or sonic damage (and is called a <em>lesser potion of fire resistance</em> or the like). </span></p>
