--- a/data/equipment/consumable-12-a2XaerM1KkPyLIPM.htm
+++ b/data/equipment/consumable-12-a2XaerM1KkPyLIPM.htm
@@ -1,10 +1,13 @@
 Name: Stunning Snare
-Nom: 
-État: auto-trad
+Nom: Piège étourdissant
+État: libre
 
 ------ Description (en) ------
 <p><span>You rig a snare to disorient a creature with a quick bash, leaving it with little ability to defend itself. The trap deals 6d6 bludgeoning damage to the first creature to enter its square; that creature must attempt a DC 31 Reflex save.<br /></span></p>
 <p><span><strong>Critical Success</strong> The creature is unaffected.<br /><strong>Success</strong> The creature takes half damage and is flat-footed for 1 round and stunned 1.<br /><strong>Failure</strong> The creature takes full damage and is flat-footed for 1 round and stunned 2.<br /><strong>Critical Failure</strong> The creature takes double damage and is flat-footed for 1 minute and stunned 4.</span></p>
 ------ Description (fr) ------
-<p><span>Vous montez un piège pour désorienter une créature d'un coup rapide, la laissant avec peu de capacité à se défendre. Le piège inflige 6d6 points de dégâts de matraquage à la première créature qui entre dans son carré ; cette créature doit tenter une sauvegarde par Réflexes DC 31.<br /></span></p>
-<p><span><strong>Succès critique</strong> La créature n'est pas affectée.<br /><strong>Succès</strong> La créature subit la moitié des dégâts et est à plat-pied pendant 1 round et étourdie 1. <br /><strong>Échec</strong> La créature subit des dégâts complets, est mise à plat pendant 1 round et est étourdie 2.<br /><strong>Échec critique</strong> La créature subit des dégâts doubles, est mise à plat pendant 1 minute et est étourdie 4.</span></p>
+<p><span>Vous fabriquez un piège pour désorienter une créature d'un coup rapide, la laissant avec peu de capacité à se défendre. Le piège inflige 6d6 points de dégâts contondants à la première créature qui entre dans la case du piège. Cette créature doit tenter un jet de  sauvegarde Réflexe DD 31.</p>
+<p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
+<p><strong>Succès</strong> La créature subit la moitié des dégâts et est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} pendant 1 round et est  @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdie} 1. </p>
+<p><strong>Échec</strong> La créature subit tous les points de dégâts, est Prise au dépourvu pendant 1 round et est Étourdie 2.</p>
+<p><strong>Échec critique</strong> La créature subit des dégâts doublés, est Prise au dépourvu pendant 1 minute et est Étourdie 4.</span></p>
