--- a/data/equipment/consumable-12-Do8vjuUBOslgPtyw.htm
+++ b/data/equipment/consumable-12-Do8vjuUBOslgPtyw.htm
@@ -1,13 +1,12 @@
 Name: Balisse Feather
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Plume d'ange Balisse
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> Envision</p>
 <p><strong>Trigger</strong> You deal damage using the affixed weapon to a creature you have seen commit an evil act.</p>
 <p>This long, fire-red feather seems to catch flame every time the weapon it adorns strikes a purveyor of evil. When you activate the feather, the creature you damaged burns with holy light. The creature must succeed at a DC 29 Will save or take a -2 status penalty to AC and saving throws and reduce its resistances by 5. These effects last until the end of your next turn.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">F</span> Envision</p>
-<p><strong>Déclencheur</strong> Vous infligez des dégâts en utilisant l'arme apposée à une créature que vous avez vue commettre un acte maléfique.</p>
-<p>Cette longue plume rouge feu semble prendre feu chaque fois que l'arme qu'elle orne frappe un pourvoyeur de mal. Lorsque vous activez la plume, la créature que vous endommagez brûle de lumière sacrée. La créature doit réussir une sauvegarde de Volonté DC 29 ou subir une pénalité d'état de -2 à la CA et aux jets de sauvegarde et réduire ses résistances de 5. Ces effets durent jusqu'à la fin de votre prochain tour ;
+<p><strong>Activation</strong> <span class="pf2-icon">F</span> Imaginer</p>
+<p><strong>Déclencheur</strong> Vous infligez des dégâts en utilisant l'arme sur laquelle est fixée la Plume d'ange Balisse, à une créature que vous avez vu commettre un acte maléfique.</p>
+<p>Cette longue plume rouge feu semble s'enflammer chaque fois que l'arme qu'elle orne frappe un agent du mal. Lorsque vous activez la plume, la créature à laquelle vous infigez des dégâts brûle de lumière sacrée. La créature doit réussir une sauvegarde de Volonté DD 29 ou subir un malus d'état de -2 à la CA et aux jets de sauvegarde et une réduction à ses résistances de 5. Ces effets durent jusqu'à la fin de votre prochain tour.
