révision capacités d'oracle

--- a/data/classfeatures/oracle-11-rrzItB68Er0DzKx7.htm
+++ b/data/classfeatures/oracle-11-rrzItB68Er0DzKx7.htm
@@ -1,7 +1,6 @@
 Name: Major Curse
 Nom: Malédiction majeure
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You've learned to better balance the conflicting powers wreaking havoc on your body. Immediately after completing the casting of a revelation spell while you are affected by your moderate curse, your curse progresses to its major effect, rather than overwhelming you. This effect lasts until you @Compendium[pf2e.actionspf2e.OSefkMgojBLqmRDh]{Refocus}, which reduces your curse to its minor effect. If you cast a revelation spell while under the effects of your major curse, you are overwhelmed by your curse.</p>
