--- a/data/classfeatures/oracle-19-571c1aGnvNVwfF6b.htm
+++ b/data/classfeatures/oracle-19-571c1aGnvNVwfF6b.htm
@@ -1,7 +1,6 @@
 Name: Oracular Clarity
 Nom: Clarté oraculaire
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You now fully grasp the nature of the divine power behind your mystery, allowing you to work magic akin to miracles. Add two common 10th-level divine spells to your repertoire. You gain a single 10th-level spell slot you can use to cast one of those two spells using oracle spellcasting.</p>
