--- a/data/classfeatures/oracle-01-tZBb3Kh4nJcNoUFI.htm
+++ b/data/classfeatures/oracle-01-tZBb3Kh4nJcNoUFI.htm
@@ -1,7 +1,6 @@
 Name: Lore Mystery
 Nom: Mystère du savoir
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Knowledge and information come freely to you. You might use this lore to gain power or perhaps to understand the divine mysteries of the multiverse. You might have a conduit to the fabled Akashic Record, maintain a subtle telepathic connection to the collective subconscious of all living creatures, or follow in the footsteps of deities such as Abadar, Irori, Nethys, Irori's scholarly nephew Gruhastha, the fey triune goddess of fate Magdh, or the lawful aeon god-figure known as the Monad.</p>
@@ -35,10 +34,21 @@ Nom: Mystère du savoir
 <p><strong>Avantage de mystère</strong> Vous possédez plus de savoir mystique que bien d’autres. Votre répertoire comporte un sort de plus de chaque niveau que vous pouvez lancer.</p>
 <p><strong>Compétence qualifiée</strong> Occultisme et une compétence de Connaissance de votre choix</p>
 <p><strong>Tour de magie accordé</strong> @Compendium[pf2e.spells-srd.OhD2Z6rIGGD5ocZA]{Lecture de l'aura}</p>
-<p><strong>Sorts de révélation</strong> initial: @Compendium[pf2e.spells-srd.k2QrUk7jWMAWozMh]{Drain du cerveau}; avancé: @Compendium[pf2e.spells-srd.LbPLNWlLCxKCo5gF]{Accès au savoir}; supérieur: @Compendium[pf2e.spells-srd.XULNb8ItUsfupxqH]{Secret effroyable}</p>
+<p><strong>Sorts de révélation</strong></p>
+<ul>
+<li>initial : @Compendium[pf2e.spells-srd.k2QrUk7jWMAWozMh]{Drain du cerveau};</li>
+<li>avancé : @Compendium[pf2e.spells-srd.LbPLNWlLCxKCo5gF]{Accès au savoir};</li>
+<li>supérieur : @Compendium[pf2e.spells-srd.XULNb8ItUsfupxqH]{Secret effroyable}</li>
+</ul>
 <p><strong>Domaines liés</strong> connaissance, vérité</p>
 <h3>Malédiction de l'afflux de connaissances</h3>
 <p>Vous possédez un lien direct avec la véritable connaissance divine, mais votre esprit mortel a du mal à intégrer ce savoir pour déterminer comment agir. Les matériaux meubles autour de vous (comme la poussière, les grains de riz et les gouttes d’eau) se déplacent lentement pour former d’étranges runes ou des écrits impossibles à déchiffrer et, parfois, vous prononcez des vérités incompréhensibles ou des phrases dans des langes inconnues sans même vous en rendre compte.</p>
-<p><strong>Malédiction mineure</strong> Vous subissez un malus de -4 à l’initiative : le fait d’analyser un soudain afflux d’informations à propos de ce qui se passe autour de vous ralentit votre réponse.</p>
-<p><strong>Moderate Curse </strong>Le flux d’informations à travers votre esprit est encore plus important. L’attention que vous portez à toutes ces nouvelles connaissances vous rend constamment @Compendium[pf2e.conditionspf2e.AJh5ex99aV6VTggg]{pris au dépourvu}. Au début de chacun de vos tours, vous effectuez automatiquement un test pour @Compendium[pf2e.actionspf2e.KygTSeDvsFoSO6HW]{Vous Souvenir} en une action libre. Ce test utilise une compétence de votre choix permettant l’action Se Souvenir et un résultat égal à 10 + votre bonus de maîtrise dans cette compétence (aucun autre bonus, ni malus ni modificateur).</p>
-<p><strong>Malédiction majeure (11e)</strong> Le flux massif d’informations qui embrume votre esprit perturbe votre capacité à communiquer. Vous pouvez comprendre tous les langages mais vous ne pouvez pas parler, ni utiliser d’effets linguistiques, ni communiquer avec vos alliés de quelque manière que ce soit. Si vous @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancez un sort} avec une composante verbale, vous devez réussir un test pur de DD 5 pour éviter de perdre le sort. Vous gagnez un bonus de statut de +4 aux jets de sauvegarde contre les effets linguistiques.</p>
+<h4>Malédiction mineure</h4>
+<p>Vous subissez un malus de -4 à l’initiative : le fait d’analyser un soudain afflux d’informations à propos de ce qui se passe autour de vous ralentit votre réponse.</p>
+<p>@Compendium[pf2e.feature-effects.zYKkObDPVRQOtwPh]{Effet: Malédiction mineure du savoir}</p>
+<h4>Malédiction modérée </h4>
+<p>Le flux d’informations à travers votre esprit est encore plus important. L’attention que vous portez à toutes ces nouvelles connaissances vous rend constamment @Compendium[pf2e.conditionspf2e.AJh5ex99aV6VTggg]{pris au dépourvu}. Au début de chacun de vos tours, vous effectuez automatiquement un test pour @Compendium[pf2e.actionspf2e.KygTSeDvsFoSO6HW]{Vous Souvenir} en une action libre. Ce test utilise une compétence de votre choix permettant l’action Se Souvenir et un résultat égal à 10 + votre bonus de maîtrise dans cette compétence (aucun autre bonus, ni malus ni modificateur).</p>
+<p>@Compendium[pf2e.feature-effects.MrLjJVltBpvMMD8Q]{Effet: Malédiction modérée du savoir}</p>
+<h4>Malédiction majeure (11e)</h4>
+<p>Le flux massif d’informations qui embrume votre esprit perturbe votre capacité à communiquer. Vous pouvez comprendre tous les langages mais vous ne pouvez pas parler, ni utiliser d’effets linguistiques, ni communiquer avec vos alliés de quelque manière que ce soit. Si vous @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancez un sort} avec une composante verbale, vous devez réussir un test pur de DD 5 pour éviter de perdre le sort. Vous gagnez un bonus de statut de +4 aux jets de sauvegarde contre les effets linguistiques.</p>
+<p>@Compendium[pf2e.feature-effects.rhG0ZcTBxfxGve5k]{Effet: Malédiction majeure du savoir}</p>
