--- a/data/classfeatures/ranger-01-0nIOGpHQNHsKSFKT.htm
+++ b/data/classfeatures/ranger-01-0nIOGpHQNHsKSFKT.htm
@@ -1,9 +1,8 @@
 Name: Hunt Prey
 Nom: Chasser une proie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>When you focus your attention on a single foe, you become unstoppable in your pursuit. You gain the Hunt Prey action.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Quand vous focalisez votre attention sur un unique adversaire, plus rien ne peut vous empêcher de le traquer. Vous pouvez accomplir l’action Chasser une proie.&nbsp;</span></p>
+<p>Quand vous focalisez votre attention sur un unique adversaire, plus rien ne peut vous empêcher de le traquer. Vous pouvez accomplir l’action Chasser une proie.</p>
