--- a/data/classfeatures/ranger-05-QhoW8ivPvYmWzyEZ.htm
+++ b/data/classfeatures/ranger-05-QhoW8ivPvYmWzyEZ.htm
@@ -1,9 +1,8 @@
 Name: Ranger Weapon Expertise
 Nom: Expertise avec les armes du rôdeur
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You've dedicated yourself to learning the intricacies of your weapons. Your proficiency ranks for simple and martial weapons and unarmed attacks increases to expert. You gain access to the critical specialization effects of all simple and martial weapons and unarmed attacks when attacking your hunted prey.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vous vous consacrez à l’apprentissage approfondi du maniement de vos armes. Votre rang de maîtrise avec les armes simples, les attaques à mains nues et les armes de guerre passe à expert. Vous pouvez appliquer les effets critiques spécialisés de toutes les armes simples et de guerre ainsi qu'aux attaques à mains nues quand vous attaquez votre proie.&nbsp;</span></p>
+<p>Vous vous consacrez à l’apprentissage approfondi du maniement de vos armes. Votre rang de maîtrise avec les armes simples, les attaques à mains nues et les armes de guerre passe à expert. Vous pouvez appliquer les effets critiques spécialisés de toutes les armes simples et de guerre ainsi qu'aux attaques à mains nues quand vous attaquez votre proie.</p>
