--- a/data/classfeatures/ranger-17-RVZC4wVy5B5W2OeS.htm
+++ b/data/classfeatures/ranger-17-RVZC4wVy5B5W2OeS.htm
@@ -1,7 +1,6 @@
 Name: Masterful Hunter
 Nom: Maître chasseur
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You have honed your abilities as a hunter to incredible levels. Your proficiency rank for your ranger class DC increases to master. When using a ranged weapon that you have master proficiency in, you can ignore the penalty if attacking your hunted prey within the weapon's second and third range increments.</p>
@@ -15,3 +14,6 @@ Nom: Maître chasseur
 <p>Si vous êtes un maître en Perception, vous bénéficiez d’un bonus de circonstances de +4 aux tests de Perception quand vous Cherchez votre proie, et si vous êtes un maître en Survie, vous bénéficiez d’un bonus de circonstances de +4 aux tests de Survie quand vous la Pistez.</p>
 <p>Vous bénéficiez également d’un avantage supplémentaire qui dépend de votre spécialité du chasseur.</p>
 <p>Pour plus d'informations, voir les différentes spécialités du chasseur.</p>
+<p>@Compendium[pf2e.classfeatures.JhLncIB10GSQowWL]{Maître chasseur (Déluge)}</p>
+<p>@Compendium[pf2e.classfeatures.BJYSUbFUGcTLaPDn]{Maître chasseur (Précision)}</p>
+<p>@Compendium[pf2e.classfeatures.vWZaLE2fEKMBw3D5]{Masterful Hunter (Ruse)}</p>
