--- a/data/classfeatures/ranger-19-bBGb1LcffXEqar0p.htm
+++ b/data/classfeatures/ranger-19-bBGb1LcffXEqar0p.htm
@@ -1,9 +1,8 @@
 Name: Swift Prey
 Nom: Changement rapide de proie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You size up your prey with only a glance. You can use Hunt Prey as a free action if it's your first action of your turn.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vous jaugez vos proies en un clin d’œil. Vous pouvez utiliser Chasser une proie par une action gratuite si c’est la première action de votre tour.&nbsp;</span></p>
+<p>Vous jaugez vos proies en un clin d’œil. Vous pouvez utiliser Chasser une proie par une action gratuite si c’est la première action de votre tour.</p>
