--- a/data/equipment/consumable-13-BxzwmwQ5O4fewa4w.htm
+++ b/data/equipment/consumable-13-BxzwmwQ5O4fewa4w.htm
@@ -1,5 +1,5 @@
 Name: Purple Worm Repellent
-Nom: Répulsif de Ver pourpre
+Nom: Répulsif de ver Pourpre
 État: libre
 
 ------ Description (en) ------
