révision des capacités du roublard

--- a/data/classfeatures/rogue-07-0npO4rPscGm0dX13.htm
+++ b/data/classfeatures/rogue-07-0npO4rPscGm0dX13.htm
@@ -1,9 +1,8 @@
 Name: Vigilant Senses (Level 7)
-Nom: Vigilance (Niveau 7)
-État: changé
-État d'origine: libre
+Nom: Sens alertes (Niveau 7)
+État: libre
 
 ------ Description (en) ------
 <p>You've developed keen awareness and attention to detail. Your proficiency rank in Perception increases to master.</p>
 ------ Description (fr) ------
-<p>Au fil de vos aventures, vous avez développé une vigilance et une attention aux détails. Votre rang de maîtrise en Perception passe à expert.</p>
+<p>Au fil de vos aventures, vous avez développé une vigilance et une attention aux détails. Votre rang de maîtrise en Perception passe à maître.</p>
