--- a/data/classfeatures/rogue-03-PNpmVmD21zViDtGC.htm
+++ b/data/classfeatures/rogue-03-PNpmVmD21zViDtGC.htm
@@ -1,7 +1,6 @@
 Name: Deny Advantage (Level 3)
 Nom: Refus d'avantage (Niveau 3)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Barbarian</strong>: Your foes struggle to pass your defenses. You aren't flat-footed to hidden, undetected, or flanking creatures of your level or lower, or creatures of your level or lower using surprise attack. However, they can still help their allies flank.</p>
@@ -10,4 +9,4 @@ Nom: Refus d'avantage (Niveau 3)
 ------ Description (fr) ------
 <p><strong>Barbare</strong> Vos adversaires ont du mal à percer vos défenses. Vous n’êtes pas pris au dépourvu par les créatures qui sont cachées, non détectées ou qui vous prennent en tenaille si elles sont d’un niveau inférieur ou égal au vôtre, ni par les attaques surprises des créatures d’un niveau inférieur ou égal au vôtre. Cependant, ces créatures peuvent toujours aider leurs alliés à vous prendre en tenaille.</p>
 <hr />
-<p><strong>Rogue</strong> Dans la mesure où vous profitez des faiblesses de la défense des autres, vous faites attention à ne pas leur laisser les mêmes opportunités. Vous n’êtes pas pris au dépourvu par les créatures qui sont cachées, non détectées ou qui vous prennent en tenaille si elles sont d’un niveau inférieur ou égal au vôtre, ni par les attaques surprises des créatures d’un niveau inférieur ou égal au vôtre. Cependant, ces créatures peuvent toujours aider leurs alliés à vous prendre en tenaille.</p>
+<p><strong>Roublard</strong> Dans la mesure où vous profitez des faiblesses de la défense des autres, vous faites attention à ne pas leur laisser les mêmes opportunités. Vous n’êtes pas pris au dépourvu par les créatures qui sont cachées, non détectées ou qui vous prennent en tenaille si elles sont d’un niveau inférieur ou égal au vôtre, ni par les attaques surprises des créatures d’un niveau inférieur ou égal au vôtre. Cependant, ces créatures peuvent toujours aider leurs alliés à vous prendre en tenaille.</p>
