--- a/data/classfeatures/rogue-11-f3Dh32EU4VsHu01b.htm
+++ b/data/classfeatures/rogue-11-f3Dh32EU4VsHu01b.htm
@@ -1,9 +1,8 @@
 Name: Rogue Expertise
 Nom: Expertise du Roublard
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your techniques are now harder to resist. Your proficiency rank for your rogue class DC increases to expert.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Il est maintenant plus difficile de résister à vos techniques. Votre rang de maîtrise dans le DD de classe roublard devient expert.&nbsp;</span></p>
+<p>Il est maintenant plus difficile de résister à vos techniques. Votre rang de maîtrise dans le DD de classe roublard devient expert.</p>
