--- a/data/classfeatures/rogue-15-W1FkMHYVDg3yTU5r.htm
+++ b/data/classfeatures/rogue-15-W1FkMHYVDg3yTU5r.htm
@@ -1,9 +1,8 @@
 Name: Double Debilitation
 Nom: Double handicap
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your opportunistic attacks are particularly detrimental. When you use Debilitating Strike, you can apply two debilitations simultaneously; removing one removes both.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vos attaques opportunistes sont particulièrement efficaces. Quand vous utilisez Frappe incapacitante, vous pouvez appliquer deux handicaps simultanément ; éliminer l’un de ces handicaps élimine également le second.&nbsp;</span></p>
+<p>Vos attaques opportunistes sont particulièrement efficaces. Quand vous utilisez Frappe incapacitante, vous pouvez appliquer deux handicaps simultanément ; éliminer l’un de ces handicaps élimine également le second.</p>
