révision lignages et ccapacités de l'ensorceleur

--- a/data/classfeatures/sorcerer-01-2goYo6VNbwC6aKF1.htm
+++ b/data/classfeatures/sorcerer-01-2goYo6VNbwC6aKF1.htm
@@ -1,7 +1,6 @@
 Name: Bloodline
 Nom: Lignages
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Choose a bloodline that gives you your spellcasting talent. This choice determines the type of spells you cast and the spell list you choose them from, additional spells you learn, and additional trained skills. You also gain Focus Points and special focus spells based on your bloodline. The bloodlines presented are as follows:</p>
@@ -22,33 +21,20 @@ Nom: Lignages
 <li><strong>@Compendium[pf2e.classfeatures.7WBZ2kkhZ7JorWu2]{Undead}</strong>: The touch of death gives you divine spells.</li>
 </ul>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Choisissez un lignage qui vous confère votre talent d’incantation. Ce choix détermine le type de sorts que vous lancez et la liste de sorts que vous utilisez pour les sélectionner, les sorts supplémentaires que vous apprenez et les compétences supplémentaires dans lesquelles vous êtes qualifié. Vous obtenez également des points de focalisation et des sorts focalisés spéciaux déterminés par votre lignage. Les lignages présentés dans cet ouvrage sont les suivants.<br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">>@Compendium[pf2e.classfeatures.3qqvnC2U8W26yae7]{Aberrant}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">une étrange et incompréhensible influence vous transmet des sorts occultes. <br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.vhW3glAaEfq2DKrw]{Angélique}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">la grâce divine vous accorde des sorts divins. <br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.w5koctOVrEcpxTIq]{Démoniaque}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">une corruption impure vous confère des sorts divins. <br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.o39zQMIdERWtmBSB]{Diabolique}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">un lien avec les diables vous octroie des sorts divins. <br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.ZHabYxSgYK0XbjhM]{Draconique}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">le sang des dragons vous attribue des sorts arcaniques. <br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.RXRnJcG4XSabZ35a]{Élémentaire}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">la puissance des éléments se manifeste en vous sous la forme de sorts primordiaux. <br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.eW3cfCH7Wpx2vik2]{Féerique}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">l’influence des fées vous confère des sorts primordiaux.</span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.tYOMBiH3HbViNWwn]{Génie}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">l’influence des génies vous confère des sorts arcaniques.</span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.O0uXZRWMNliDbkxU]{Guenaude}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">la corruption d’une guenaude vous procure des sorts occultes. <br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.ZEtJJ5UOlV5oTWWp]{Impérial}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">une puissance ancienne vous octroie des sorts arcaniques. <br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.7WBZ2kkhZ7JorWu2]{Mort-vivant}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">le contact de la mort vous confère des sorts divins.</span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.5Wxjghw7lHuCxjZz]{Nymphe}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">l'influence des nymphes vous confère des sorts primordiaux.<br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.uoQOm41BVdSo6pAS]{Ombre}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">l'influence du plan de l'Ombre vous confère des sorts occultes.<br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">@Compendium[pf2e.classfeatures.PpzH9tJULk5ksX9w]{Psychopompe}</span></h2>
-<p><span id="ctl00_MainContent_DetailedOutput">l'influence des psychopompes vous confère des sorts divins.<br></span></p>
-<p>&nbsp;</p>
+<p>Choisissez un lignage qui vous confère votre talent d’incantation. Ce choix détermine le type de sorts que vous lancez et la liste de sorts que vous utilisez pour les sélectionner, les sorts supplémentaires que vous apprenez et les compétences supplémentaires dans lesquelles vous êtes qualifié. Vous obtenez également des points de focalisation et des sorts focalisés spéciaux déterminés par votre lignage. Les lignages présentés dans cet ouvrage sont les suivants.</p>
+<ul>
+<li><strong>@Compendium[pf2e.classfeatures.3qqvnC2U8W26yae7]{Aberrant}</strong> une étrange et incompréhensible influence vous transmet des sorts occultes.</li>
+<li><strong>@Compendium[pf2e.classfeatures.vhW3glAaEfq2DKrw]{Angélique}</strong> la grâce divine vous accorde des sorts divins.</li>
+<li><strong>@Compendium[pf2e.classfeatures.w5koctOVrEcpxTIq]{Démoniaque}</strong> une corruption impure vous confère des sorts divins.</li>
+<li><strong>@Compendium[pf2e.classfeatures.o39zQMIdERWtmBSB]{Diabolique}</strong> un lien avec les diables vous octroie des sorts divins.</li>
+<li><strong>@Compendium[pf2e.classfeatures.ZHabYxSgYK0XbjhM]{Draconique}</strong> le sang des dragons vous attribue des sorts arcaniques.</li>
+<li><strong>@Compendium[pf2e.classfeatures.RXRnJcG4XSabZ35a]{Élémentaire}</strong> la puissance des éléments se manifeste en vous sous la forme de sorts primordiaux. </li>
+<li><strong>@Compendium[pf2e.classfeatures.eW3cfCH7Wpx2vik2]{Féerique}</strong> l’influence des fées vous confère des sorts primordiaux.</li>
+<li><strong>@Compendium[pf2e.classfeatures.tYOMBiH3HbViNWwn]{Génie}</strong> l’influence des génies vous confère des sorts arcaniques.</li>
+<li><strong>@Compendium[pf2e.classfeatures.O0uXZRWMNliDbkxU]{Guenaude}</strong> la corruption d’une guenaude vous procure des sorts occultes.</li>
+<li><strong>@Compendium[pf2e.classfeatures.ZEtJJ5UOlV5oTWWp]{Impérial}</strong> une puissance ancienne vous octroie des sorts arcaniques.</li>
+<li><strong>@Compendium[pf2e.classfeatures.7WBZ2kkhZ7JorWu2]{Mort-vivant}</strong> le contact de la mort vous confère des sorts divins.</li>
+<li><strong>@Compendium[pf2e.classfeatures.5Wxjghw7lHuCxjZz]{Nymphe}</strong> l'influence des nymphes vous confère des sorts primordiaux.</li>
+<li><strong>@Compendium[pf2e.classfeatures.uoQOm41BVdSo6pAS]{Ombre}</strong> l'influence du plan de l'Ombre vous confère des sorts occultes.</li>
+<li><strong>@Compendium[pf2e.classfeatures.PpzH9tJULk5ksX9w]{Psychopompe}</strong> l'influence des psychopompes vous confère des sorts divins.</li>
+</ul>
