--- a/data/classfeatures/sorcerer-01-O0uXZRWMNliDbkxU.htm
+++ b/data/classfeatures/sorcerer-01-O0uXZRWMNliDbkxU.htm
@@ -1,7 +1,6 @@
 Name: Bloodline: Hag
 Nom: Lignage : Guenaude
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A hag long ago cursed your family, or you are a descendant of a hag or changeling, and their accursed corruption infests your blood and soul.</p>
@@ -12,5 +11,9 @@ Nom: Lignage : Guenaude
 <p><strong>Blood Magic</strong> Spiteful curses punish your foes. You deal 2 mental damage per spell level (basic Will save) to the first creature that deals damage to you before the end of your next turn.</p>
 <p>@Compendium[pf2e.feature-effects.6fb15XuSV4TNuVAT]{Effect: Hag Blood Magic}</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Une guenaude a maudit votre famille il y a longtemps ou vous êtes le descendant d’une guenaude ou d’une changelin, et leur malédiction corruptrice contamine votre sang et votre âme.<br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Liste de sorts</strong> <a href="https://2e.aonprd.com/Spells.aspx?Tradition=3"><u>occultes</u></a><br><strong>Compétences de lignage</strong> <a href="https://2e.aonprd.com/Skills.aspx?ID=5"><u>Duperie</u></a>, <a href="https://2e.aonprd.com/Skills.aspx?ID=11"><u>Occultisme</u></a><br><strong>Sorts accordés</strong> tour de magie @Compendium[pf2e.spells-srd.4gBIw4IDrSfFHik4]{hébétement}, 1st: @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{déguisement illusoire}, 2nd: @Compendium[pf2e.spells-srd.CQb8HtQ1BPeZmu9h]{idiotie}, 3rd: @Compendium[pf2e.spells-srd.VosLNn2M8S7JH67D]{cécité}, 4th: @Compendium[pf2e.spells-srd.KSAEhNfZyXMO7Z7V]{malédiction du paria}, 5th: @Compendium[pf2e.spells-srd.z2mfh3oPnfYqXflY]{ malédiction du marin}, 6th: @Compendium[pf2e.spells-srd.dN8QBNuTiaBHCKUe]{métamorphose funeste}, 7th: @Compendium[pf2e.spells-srd.8kJbiBEjMWG4VUjs]{déformer l’esprit}, 8th: @Compendium[pf2e.spells-srd.MS60WhVifb45qORJ]{épidémie spirituelle}, 9th: @Compendium[pf2e.spells-srd.Tc5NLaMu71vrGTJQ]{hostilité naturelle}<br><strong>Sorts de lignage</strong> initial: @Compendium[pf2e.spells-srd.kvm68hVtmADiIvN4]{maléfice de jalousie}, avancé: @Compendium[pf2e.spells-srd.aZg3amDcrXz3cLCz]{visage terrifiant}, supérieur: @Compendium[pf2e.spells-srd.x2LALaHXO7644GQA]{tu es à moi}<br><strong>Magie du sang</strong> Vous maudissez vos ennemis avec véhémence. La première créature qui vous inflige des dégâts avant la fin de votre prochain tour subit 2 dégâts mentaux par niveau de sort et doit effectuer un jet de Volonté basique.</span></p>
+<p>Une guenaude a maudit votre famille il y a longtemps ou vous êtes le descendant d’une guenaude ou d’une changelin, et leur malédiction corruptrice contamine votre sang et votre âme.</p>
+<p><strong>Liste de sorts</strong> occulte</p>
+<p><strong>Compétences de lignage</strong> Duperie, Occultisme</p>
+<p><strong>Sorts accordés</strong> tour de magie @Compendium[pf2e.spells-srd.4gBIw4IDrSfFHik4]{Hébétement}, 1er: @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Déguisement illusoire}, 2e: @Compendium[pf2e.spells-srd.CQb8HtQ1BPeZmu9h]{Idiotie}, 3e: @Compendium[pf2e.spells-srd.VosLNn2M8S7JH67D]{Cécité}, 4e: @Compendium[pf2e.spells-srd.KSAEhNfZyXMO7Z7V]{Malédiction du paria}, 5e: @Compendium[pf2e.spells-srd.z2mfh3oPnfYqXflY]{Malédiction du marin}, 6e: @Compendium[pf2e.spells-srd.dN8QBNuTiaBHCKUe]{Métamorphose funeste}, 7e: @Compendium[pf2e.spells-srd.8kJbiBEjMWG4VUjs]{Déformer l’esprit}, 8e: @Compendium[pf2e.spells-srd.MS60WhVifb45qORJ]{Épidémie spirituelle}, 9e: @Compendium[pf2e.spells-srd.Tc5NLaMu71vrGTJQ]{Hostilité naturelle}</p>
+<p><strong>Sorts de lignage</strong> initial: @Compendium[pf2e.spells-srd.kvm68hVtmADiIvN4]{Maléfice de jalousie}, avancé: @Compendium[pf2e.spells-srd.aZg3amDcrXz3cLCz]{Visage terrifiant}, supérieur: @Compendium[pf2e.spells-srd.x2LALaHXO7644GQA]{Tu es à moi}</p>
+<p><strong>Magie du sang</strong> Vous maudissez vos ennemis avec véhémence. La première créature qui vous inflige des dégâts avant la fin de votre prochain tour subit 2 dégâts mentaux par niveau de sort et doit effectuer un jet de Volonté basique.</span></p>
