capacités de l'ensorceleur

--- a/data/classfeatures/sorcerer-01-7WBZ2kkhZ7JorWu2.htm
+++ b/data/classfeatures/sorcerer-01-7WBZ2kkhZ7JorWu2.htm
@@ -1,7 +1,6 @@
 Name: Bloodline: Undead
 Nom: Lignage : Mort-vivant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>The touch of undeath runs through your blood. Your family tree might contain powerful undead, like a vampire, or perhaps you died and returned a bit different.</p>
