--- a/data/classfeatures/sorcerer-01-PpzH9tJULk5ksX9w.htm
+++ b/data/classfeatures/sorcerer-01-PpzH9tJULk5ksX9w.htm
@@ -1,7 +1,6 @@
 Name: Bloodline: Psychopomp
 Nom: Lignage : Psychopompe
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>For good or ill, your ancestors' deeds drew the attention of psychopomps, or you might somehow count one in your family tree. The presence of these shepherds of souls and enemies of undeath has left an indelible mark on you.</p>
