--- a/data/classfeatures/sorcerer-01-tYOMBiH3HbViNWwn.htm
+++ b/data/classfeatures/sorcerer-01-tYOMBiH3HbViNWwn.htm
@@ -1,7 +1,6 @@
 Name: Bloodline: Genie
 Nom: Lignage : Génie
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Through lineage, magic, or wishes made real, the blood of a noble genie flows through your veins.</p>
