--- a/data/classfeatures/sorcerer-01-vhW3glAaEfq2DKrw.htm
+++ b/data/classfeatures/sorcerer-01-vhW3glAaEfq2DKrw.htm
@@ -1,7 +1,6 @@
 Name: Bloodline: Angelic
 Nom: Lignage : Angélique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>One of your forebears hailed from a celestial realm, or your ancestors' devotion led to their lineage being blessed.</p>
