--- a/data/classfeatures/sorcerer-01-w5koctOVrEcpxTIq.htm
+++ b/data/classfeatures/sorcerer-01-w5koctOVrEcpxTIq.htm
@@ -1,7 +1,6 @@
 Name: Bloodline: Demonic
 Nom: Lignage : Démoniaque
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Demons debase all they touch. One of your ancestors fell victim to their corruption, and you are burdened by that sin.</p>
@@ -12,5 +11,10 @@ Nom: Lignage : Démoniaque
 <p><strong>Blood Magic</strong> The corruption of sin weakens a target's defenses or makes you more imposing. Either a target takes a -1 status penalty to AC for 1 round, or you gain a +1 status bonus to Intimidation checks for 1 round.</p>
 <p>@Compendium[pf2e.feature-effects.aKRo5TIhUtu0kyEr]{Effect: Demonic Blood Magic (Self)}, @Compendium[pf2e.feature-effects.yfbP64r4a9e5oyli]{Effect: Demonic Blood Magic (Target)}</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput"> Les démons corrompent tout ce qu’ils touchent. L’un de vos ancêtres a succombé à leur corruption et vous portez à présent le poids de ce péché.<br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Liste de sorts</strong> <a href="https://2e.aonprd.com/Spells.aspx?Tradition=2"><u>divins</u></a><br><strong>Compétences de lignage</strong> <a href="https://2e.aonprd.com/Skills.aspx?ID=6"><u> Intimidation</u></a>, <a href="https://2e.aonprd.com/Skills.aspx?ID=13"><u>Religion</u></a><br><strong>Sorts accordés</strong> tour de magie @Compendium[pf2e.spells-srd.WBmvzNDfpwka3qT4]{aspersion acide}, 1st: @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{terreur}, 2nd: @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{agrandissement}, 3rd: @Compendium[pf2e.spells-srd.WsUwpfmhKrKwoIe3]{lenteur}, 4th: @Compendium[pf2e.spells-srd.hVU9msO9yGkxKZ3J]{colère divine}, 5th: @Compendium[pf2e.spells-srd.vJuaxTd6q11OjGqA]{peste abyssale}, 6th @Compendium[pf2e.spells-srd.r7ihOgKv19eJQnik]{ désintégration}, 7th: @Compendium[pf2e.spells-srd.sX2o0HH4RjJDAZ8C]{décret divin}, 8th: @Compendium[pf2e.spells-srd.nsQvjNyg4Whw2mek]{aura divine}, 9th: @Compendium[pf2e.spells-srd.4WS7HrFjwNvTn8T2]{prémonition}<br><strong>Sorts de lignage</strong> initial: @Compendium[pf2e.spells-srd.SdXFiQ4Py8761sNO]{mâchoires gloutonnes}, avancé: @Compendium[pf2e.spells-srd.iQD8OhhkwhvD8Blw]{marais de paresse}, supérieur: @Compendium[pf2e.spells-srd.crF4g9jRN1y84MSD]{colère abyssale}<br><strong>Magie du sang</strong> La corruption pécheresse affaiblit les défenses d’une cible ou vous rend plus intimidant. Soit une cible subit un malus de statut de −1 à la CA pendant 1 round ou vous bénéficiez d’un bonus de statut de +1 aux tests d’Intimidation pendant 1 round.</span></p>
+<p>Les démons corrompent tout ce qu’ils touchent. L’un de vos ancêtres a succombé à leur corruption et vous portez à présent le poids de ce péché.</p>
+<p><strong>Liste de sorts</strong> divin</p>
+<p><strong>Compétences de lignage</strong> Intimidation, Religion</p>
+<p><strong>Sorts accordés</strong> tour de magie @Compendium[pf2e.spells-srd.WBmvzNDfpwka3qT4]{Aspersion acide}, 1er: @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Terreur}, 2e: @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Agrandissement}, 3e: @Compendium[pf2e.spells-srd.WsUwpfmhKrKwoIe3]{Lenteur}, 4e: @Compendium[pf2e.spells-srd.hVU9msO9yGkxKZ3J]{Colère divine}, 5e: @Compendium[pf2e.spells-srd.vJuaxTd6q11OjGqA]{Peste abyssale}, 6e: @Compendium[pf2e.spells-srd.r7ihOgKv19eJQnik]{Désintégration}, 7e: @Compendium[pf2e.spells-srd.sX2o0HH4RjJDAZ8C]{Décret divin}, 8e: @Compendium[pf2e.spells-srd.nsQvjNyg4Whw2mek]{Aura divine}, 9e: @Compendium[pf2e.spells-srd.4WS7HrFjwNvTn8T2]{Prémonition}</p>
+<p><strong>Sorts de lignage</strong> initial: @Compendium[pf2e.spells-srd.SdXFiQ4Py8761sNO]{Mâchoires gloutonnes}, avancé: @Compendium[pf2e.spells-srd.iQD8OhhkwhvD8Blw]{Marais de paresse}, supérieur: @Compendium[pf2e.spells-srd.crF4g9jRN1y84MSD]{Colère abyssale}</p>
+<p><strong>Magie du sang</strong> La corruption pécheresse affaiblit les défenses d’une cible ou vous rend plus intimidant. Soit une cible subit un malus de statut de −1 à la CA pendant 1 round ou vous bénéficiez d’un bonus de statut de +1 aux tests d’Intimidation pendant 1 round.</p>
+<p>@Compendium[pf2e.feature-effects.aKRo5TIhUtu0kyEr]{Effect: Demonic Blood Magic (Self)}, @Compendium[pf2e.feature-effects.yfbP64r4a9e5oyli]{Effet: Magie du sang démoniaque (Cible)}</p>
