--- a/data/classfeatures/sorcerer-01-ZEtJJ5UOlV5oTWWp.htm
+++ b/data/classfeatures/sorcerer-01-ZEtJJ5UOlV5oTWWp.htm
@@ -1,7 +1,6 @@
 Name: Bloodline: Imperial
 Nom: Lignage : Impérial
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>One of your ancestors was a mortal who mastered magic. Such magical blood can remain latent for generations, but in you it manifested in full.</p>
@@ -12,5 +11,10 @@ Nom: Lignage : Impérial
 <p><strong>Blood Magic</strong> A surge of ancestral memories grants you or one target a +1 status bonus to skill checks for 1 round.</p>
 <p>@Compendium[pf2e.feature-effects.vguxP8ukwVTWWWaA]{Effect: Imperial Blood Magic}</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">L’un de vos ancêtres était un mortel qui maîtrisait la magie. Un sang aussi imprégné de magie peut rester latent pendant plusieurs générations, puis développer toute sa puissance dans vos veines.<br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Liste de sorts</strong>arcaniques<br><strong>Compétences de lignage</strong> Arcanes, Société<br><strong>Sorts accordés</strong> tour de magie @Compendium[pf2e.spells-srd.gpzpAAAJ1Lza2JVl]{détection de la magie}, 1st: @Compendium[pf2e.spells-srd.gKKqvLohtrSJj3BM]{projectile magique}, 2nd: @Compendium[pf2e.spells-srd.9HpwDN4MYQJnW0LG]{dissipation de la magie}, 3rd: @Compendium[pf2e.spells-srd.o6YCGx4lycsYpww4]{rapidité}, 4th: @Compendium[pf2e.spells-srd.VlNcjmYyu95vOUe8]{porte dimensionnelle}, 5th: @Compendium[pf2e.spells-srd.Ek5XI0aEdZhBgm21]{oeil indiscret}, 6th: @Compendium[pf2e.spells-srd.r7ihOgKv19eJQnik]{désintégration}, 7th: @Compendium[pf2e.spells-srd.d6o52BnjViNz7Gub]{rayon prismatique}, 8th: @Compendium[pf2e.spells-srd.Oj1PJBMQD9vuwCv7]{dédale}, 9th: @Compendium[pf2e.spells-srd.PngDCmU0MXZkbu0v]{sphère prismatique}<br><strong>Sorts de lignage</strong> initial: @Compendium[pf2e.spells-srd.dtOUkMC57izf93z5]{souvenirs ancestraux}, avancé: @Compendium[pf2e.spells-srd.GxxnhRIaoGKtu1iO]{extension de durée}, supérieur: @Compendium[pf2e.spells-srd.h47yv6j6x1pUtzlr]{contre-mesure arcanique}<br><strong>Magie du sang</strong> Des souvenirs ancestraux refont brusquement surface en conférant à vous ou à une cible un bonus de statut de +1 aux tests de compétences pendant 1 round.</span></p>
+<p>L’un de vos ancêtres était un mortel qui maîtrisait la magie. Un sang aussi imprégné de magie peut rester latent pendant plusieurs générations, puis développer toute sa puissance dans vos veines.</p>
+<p><strong>Liste de sorts</strong> arcanique</p>
+<p><strong>Compétences de lignage</strong> Arcanes, Société</p>
+<p><strong>Sorts accordés</strong> tour de magie @Compendium[pf2e.spells-srd.gpzpAAAJ1Lza2JVl]{Détection de la magie}, 1er: @Compendium[pf2e.spells-srd.gKKqvLohtrSJj3BM]{Projectile magique}, 2e: @Compendium[pf2e.spells-srd.9HpwDN4MYQJnW0LG]{Dissipation de la magie}, 3e: @Compendium[pf2e.spells-srd.o6YCGx4lycsYpww4]{Rapidité}, 4e: @Compendium[pf2e.spells-srd.VlNcjmYyu95vOUe8]{Porte dimensionnelle}, 5e: @Compendium[pf2e.spells-srd.Ek5XI0aEdZhBgm21]{Œil indiscret}, 6e: @Compendium[pf2e.spells-srd.r7ihOgKv19eJQnik]{Désintégration}, 7e: @Compendium[pf2e.spells-srd.d6o52BnjViNz7Gub]{Rayon prismatique}, 8e: @Compendium[pf2e.spells-srd.Oj1PJBMQD9vuwCv7]{Dédale}, 9e: @Compendium[pf2e.spells-srd.PngDCmU0MXZkbu0v]{Sphère prismatique}</p>
+<p><strong>Sorts de lignage</strong> initial: @Compendium[pf2e.spells-srd.dtOUkMC57izf93z5]{Souvenirs ancestraux}, avancé: @Compendium[pf2e.spells-srd.GxxnhRIaoGKtu1iO]{Extension de durée}, supérieur: @Compendium[pf2e.spells-srd.h47yv6j6x1pUtzlr]{Contre-mesure arcanique}</p>
+<p><strong>Magie du sang</strong> Des souvenirs ancestraux refont brusquement surface en conférant à vous ou à une cible un bonus de statut de +1 aux tests de compétences pendant 1 round.</span></p>
+<p>@Compendium[pf2e.feature-effects.vguxP8ukwVTWWWaA]{Effet: Magie du sang impérial}</p>
