--- a/data/equipment/consumable-14-8qUja4YdvewN4es0.htm
+++ b/data/equipment/consumable-14-8qUja4YdvewN4es0.htm
@@ -1,7 +1,6 @@
 Name: Death Knell Powder
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Poudre de mise à mort
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">2</span> Interact;</p>
@@ -15,13 +14,13 @@ Nom:
 <hr />
 <p><strong>Craft Requirements</strong> Supply one casting of @Compendium[pf2e.spells-srd.dLdRqT6UxTKlsPgp]{Death Knell}.</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">2</span> Interact;</p>
-<p>Ce poison est fabriqué à partir de spores toxiques de champignons du glas, réduits en une poudre grise et imprégnés d'énergie nécromantique. Si vous'êtes réduit à 0 point de vie alors que vous êtes sous l'effet de <em>poudre du glas</em>, vous devez réussir une sauvegarde de Volonté DC 34 ou mourir (c'est un effet de mort). Si vous mourez, une créature aléatoire adjacente à vous est soutenue par votre force vitale sortante et gagne 20 HP temporaires et un bonus de statut de +1 aux jets d'attaque et de dégâts pendant 10 minutes.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">2</span> Interagir</p>
+<p>Ce poison est fabriqué à partir de spores toxiques de champignons du Glas, réduits en une poudre grise et imprégnés d'énergie nécromantique. Si vous'êtes réduit à 0 point de vie alors que vous êtes sous l'effet de la poudre du glas, vous devez réussir un jet de sauvegarde Volonté DD 34 ou mourir (c'est un effet de mort). Si vous mourez, une créature aléatoire adjacente à vous est soudainement envahie par la force vitale qui s'échappe de vous, et gagne 20 points de vie temporaires et un bonus d'état de +1 aux jets d'attaque et de dégâts pendant 10 minutes.</p>
 <hr />
-<p><strong>Jet de sauvegarde</strong> DC 34 Fortitude;</p>
-<p><strong>Durée maximale</strong> 6 rounds;</p>
-<p><strong>Stade 1</strong>[[/r 7d6 #poison]] dégâts de poison (1 round);</p>
-<p><strong>Stade 2</strong>[[/r 9d6 #poison]] dégâts de poison (1 round);</p>
-<p><strong>Stade 3</strong> [[/r 12d6 #poison]] dégâts de poison (1 round)</p>
+<p><strong>Jet de sauvegarde</strong> DD 34 Vigueur</p>
+<p><strong>Durée maximale</strong> 6 rounds</p>
+<p><strong>Stade 1</strong>[[/r 7d6 #poison]] points de dégâts poison (1 round)</p>
+<p><strong>Stade 2</strong>[[/r 9d6 #poison]] points de dégâts poison (1 round)</p>
+<p><strong>Stade 3</strong> [[/r 12d6 #poison]] points de dégâts poison (1 round)</p>
 <hr />
-<p><strong>Exigences d'artisanat</strong> Fournissez une incantation de @Compendium[pf2e.spells-srd.dLdRqT6UxTKlsPgp]{Death Knell}.</p>
+<p><strong>Condition de fabrication</strong> Fournissez un sort de @Compendium[pf2e.spells-srd.dLdRqT6UxTKlsPgp]{Mise à mort}.</p>
