--- a/data/equipment/consumable-16-7p3C9xf3XgUbvKHL.htm
+++ b/data/equipment/consumable-16-7p3C9xf3XgUbvKHL.htm
@@ -1,7 +1,6 @@
 Name: Frenzy Oil
-Nom: 
-État: changé
-État d'origine: auto-trad
+Nom: Huile de frénésie
+État: libre
 
 ------ Description (en) ------
 <p>This oil, which is pressed from vrock spores and mixed with a combination of acacia ash and thistle seeds, seeps into the skin of living creatures, initially inspiring irritability that unpredictably manifests as berserk rage.</p>
@@ -14,12 +13,12 @@ Nom:
 <p><strong>Stage 2</strong> [[/r 6d6#mental]] mental damage, attack nearby creatures as if confused (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 8d6#mental]] mental damage, @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigued}, attack nearby creatures as if confused (1 round)</p>
 ------ Description (fr) ------
-Cette huile, qui est pressée à partir de spores de vrock et mélangée à une combinaison de cendres d'acacia et de graines de chardon, s'infiltre dans la peau des créatures vivantes, inspirant d'abord une irritabilité qui se manifeste de façon imprévisible par une rage berserk.</p>
+Cette huile, qui est pressée à partir de spores de Vrock et mélangée à une combinaison de cendres d'acacia et de graines de chardon, s'infiltre dans la peau des créatures vivantes, inspirant d'abord une irritabilité qui découle de façon imprévisible en une rage de barbare.</p>
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interact (Contact)</p>
-<p><strong>Jet de sauvegarde</strong> DC 37 Force</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Contact)</p>
+<p><strong>Jet de sauvegarde</strong> DD 37 Vigueur</p>
 <p><strong>Début</strong> [[/r 1d6]] minutes</p>
 <p><strong>Durée maximale</strong> 6 rounds</p>
-<p><strong>Stade 1</strong> [[/r 4d6#mental]] dégâts mentaux, @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Quickened} 1, attaque les créatures proches comme si @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confusion}. (1 round)</p>
-<p><strong>Stade 2</strong> [[/r 6d6#mental]] dégâts mentaux, attaque les créatures proches comme si elles étaient confuses (1 round)</p>
-<p><strong>Stade 3</strong> [[/r 8d6#mental]] dommages mentaux, @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigued}, attaque les créatures proches comme si elles étaient confuses (1 round)</p>
+<p><strong>Stade 1</strong> [[/r 4d6#mental]] points de dégâts mentaux, @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Accéléré} 1, attaque les créatures proches comme si il est dans un état  @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus}. (1 round)</p>
+<p><strong>Stade 2</strong> [[/r 6d6#mental]] points de dégâts mentaux, attaque les créatures proches dans un état Confus (1 round)</p>
+<p><strong>Stade 3</strong> [[/r 8d6#mental]] points de dégâts mentaux, @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigué}, attaque les créatures proches dans un état Confus (1 round)</p>
