capacités de bretteur révisées

--- a/data/classfeatures/swashbuckler-01-beW1OqibVQ3fBvRw.htm
+++ b/data/classfeatures/swashbuckler-01-beW1OqibVQ3fBvRw.htm
@@ -1,7 +1,6 @@
 Name: Swashbuckler's Style
 Nom: Style du bretteur
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>As a swashbuckler, you have your own distinctive style that enables you to gracefully handle everyday events and life-or-death situations alike. Choose a swashbuckler's style. This style determines the additional actions you use to gain panache and makes you trained in the skill related to that action. The styles presented in this book are as follows.</p>
