--- a/data/classfeatures/swashbuckler-09-KxpaxUSuBC7hr4F7.htm
+++ b/data/classfeatures/swashbuckler-09-KxpaxUSuBC7hr4F7.htm
@@ -1,7 +1,6 @@
 Name: Exemplary Finisher
 Nom: Coup final exemplaire
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You execute your finishing moves with spectacular flair, adding special effects to your finishers. If a @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike} you make as part of a finisher hits a foe, you add one of the following effects to the Strike, depending on your swashbuckler's style.</p>
