--- a/data/classfeatures/swashbuckler-09-U74JoAcLHTOsZG6q.htm
+++ b/data/classfeatures/swashbuckler-09-U74JoAcLHTOsZG6q.htm
@@ -1,7 +1,6 @@
 Name: Swashbuckler Expertise
 Nom: Expertise du bretteur
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You perform swashbuckling techniques with exceptional flair, making them harder to resist. Your proficiency rank for your swashbuckler class DC increases to expert.</p>
