--- a/data/classfeatures/swashbuckler-19-ypfT3iybew6ZSIUl.htm
+++ b/data/classfeatures/swashbuckler-19-ypfT3iybew6ZSIUl.htm
@@ -1,7 +1,6 @@
 Name: Eternal Confidence
 Nom: Confiance éternelle
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>As a swashbuckler at the peak of your skill, you swell with confidence and bravado in every attack. Your proficiency rank for your swashbuckler class DC increases to master.</p>
