--- a/data/classfeatures/swashbuckler-01-pyo0vmxUFIFX2GNl.htm
+++ b/data/classfeatures/swashbuckler-01-pyo0vmxUFIFX2GNl.htm
@@ -1,7 +1,6 @@
 Name: Confident Finisher
 Nom: Coup final assuré
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You gain an elegant finishing attack you can make when you have panache. The finisher trait is described below. You gain the @Compendium[pf2e.actionspf2e.K878asDgf1EF0B9S]{Confident Finisher} action.</p>
@@ -9,6 +8,8 @@ Nom: Coup final assuré
 <p><strong>Finisher:</strong> Finishers are spectacular finishing moves that use your panache. You can use a finisher only if you have panache, and you lose your panache immediately after performing a finisher. Once you use a finisher, you can't use actions that have the attack trait for the rest of your turn.</p>
 <p>Some actions with the finisher trait also grant an effect on a failure. Effects added on a failure don't apply on a critical failure. If your finisher action succeeds, you can still choose to apply the failure effect instead. For example, you might do this when an attack deals no damage due to resistance.</p>
 ------ Description (fr) ------
-<p>Vous gagnez une attaque finale élégante que vous pouvez porter quand vous possédez du panache. Le trait Coup final est décrit ci-dessous. Vous gagnez l’action @Compendium[pf2e.actionspf2e.K878asDgf1EF0B9S]{Coup final assuré}.</p><hr />
-<p><strong>Coup final</strong>  Les coups finaux sont des mouvements finaux spectaculaires qui utilisent votre panache. Vous ne pouvez utiliser un coup final que si vous possédez du panache, et vous perdez votre panache immédiatement après avoir réalisé un coup final. Quand vous utilisez un coup final, vous ne pouvez plus utiliser d’action portant le trait Attaque pendant le reste de votre tour.</p>
-<p>Certaines actions possédant le trait Coup final produisent également un effet en cas d’échec. Les effets ajoutés en cas d’échec ne s’appliquent pas en cas d’échec critique. Si votre action de coup final réussit, vous pouvez toujours choisir d’appliquer l’effet d’un échec au lieu de l’effet normal. Par exemple, vous pourriez faire ce choix lorsqu'une attaque n’inflige aucun dégât à cause de la résistance.</p>
+<p>Vous gagnez une attaque finale élégante que vous pouvez porter quand vous possédez du panache. Le trait Coup final est décrit ci-dessous. Vous gagnez l’action @Compendium[pf2e.actionspf2e.K878asDgf1EF0B9S]{Coup final assuré}.</p>
+<hr />
+<h3>Coup final</h3>
+<p>Un coup final est un mouvement final spectaculaire qui utilise votre panache. Vous ne pouvez utiliser un coup final que si vous possédez du panache et vous perdez votre panache immédiatement après avoir réalisé un coup final. Quand vous utilisez un coup final, vous ne pouvez plus utiliser d’action portant le trait Attaque pendant le reste de votre tour.</p>
+<p>Certaines actions possédant le trait Coup final produisent également un effet en cas d’échec. Les effets ajoutés en cas d’échec ne s’appliquent pas en cas d’échec critique. Si votre action de coup final réussit, vous pouvez toujours choisir d’appliquer l’effet d’un échec au lieu de son effet normal. Par exemple, vous pourriez faire ce choix parce qu'une attaque n’inflige aucun dégât à cause d'une résistance.</p>
