--- a/data/classfeatures/swashbuckler-03-pthjQIK9pDxnbER6.htm
+++ b/data/classfeatures/swashbuckler-03-pthjQIK9pDxnbER6.htm
@@ -1,7 +1,6 @@
 Name: Stylish Tricks
 Nom: Astuces de style
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>At 3rd level, 7th level, and 15th level, you gain a skill feat. This feat must be for Acrobatics or the trained skill from your swashbuckler's style</p>
