--- a/data/classfeatures/swashbuckler-05-F5BHEav90oOJ2LwN.htm
+++ b/data/classfeatures/swashbuckler-05-F5BHEav90oOJ2LwN.htm
@@ -1,11 +1,12 @@
 Name: Weapon Expertise (Swashbuckler)
 Nom: Expertise martiale (Bretteur)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You've dedicated yourself to learning the intricacies of your weapons. Your proficiency ranks for simple weapons, martial weapons, and unarmed attacks increase to expert.</p>
 <hr />
 <p>You gain access to the critical specialization effects of all weapons for which you have expert proficiency.</p>
 ------ Description (fr) ------
-<p>Vous vous consacrez à l’apprentissage approfondi du maniement de vos armes. Votre rang de maîtrise avec les armes simples, les attaques à mains nues et les armes de guerre passe à expert. Vous obtenez l'accès aux effets de spécialisation critique de toutes les armes pour lesquelles vous disposez du rang expert.</p>
+<p>Vous vous consacrez à l’apprentissage approfondi du maniement de vos armes. Votre rang de maîtrise avec les armes simples, les attaques à mains nues et les armes de guerre passe à expert.</p>
+<hr />
+<p>Vous obtenez l'accès aux effets de critique spécialisé de toutes les armes pour lesquelles vous disposez du rang expert.</p>
