--- a/data/classfeatures/swashbuckler-13-i6563IU7x4L9oRgC.htm
+++ b/data/classfeatures/swashbuckler-13-i6563IU7x4L9oRgC.htm
@@ -1,7 +1,6 @@
 Name: Weapon Mastery (Level 13)
 Nom: Maîtrise avec les armes (Niveau 13)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You fully understand your weapons. Your proficiency ranks for simple weapons, martial weapons, and unarmed attacks increase to master.</p>
