révision de sorcière

--- a/data/classfeatures/witch-01-4IfYHrQMosJNM8hv.htm
+++ b/data/classfeatures/witch-01-4IfYHrQMosJNM8hv.htm
@@ -1,7 +1,6 @@
 Name: Fervor Patron
 Nom: Patron : Ferveur
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Your patron represents a grand ideal or goal, granting you magic to further their mission and bring others to the cause.</p>
