--- a/data/classfeatures/witch-01-NAXRmMjj0gcyD7ie.htm
+++ b/data/classfeatures/witch-01-NAXRmMjj0gcyD7ie.htm
@@ -1,7 +1,6 @@
 Name: Curse Patron
 Nom: Patron : Malédiction
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Foiling foes and undermining those who stand in your way are the tools of the curse patrons.</p>
