--- a/data/classfeatures/witch-01-VVMMJdIWL7fAsQf3.htm
+++ b/data/classfeatures/witch-01-VVMMJdIWL7fAsQf3.htm
@@ -1,7 +1,6 @@
 Name: Baba Yaga Patron
 Nom: Patron : Baba Yaga
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p style="box-sizing: border-box; user-select: text; color: #191813; font-family: Roboto, system, -apple-system, sans-serif; font-size: 13px;">Baba Yaga teaches you how to transfer spirits into objects and freeze your foes.</p>
@@ -12,8 +11,8 @@ Nom: Patron : Baba Yaga
 ------ Description (fr) ------
 <p>Baba Yaga vous a appris comment transférer les esprits dans les objets et geler vos ennemis.</p>
 <ul>
-<li><strong>Liste de sorts</strong>&nbsp;occulte</li>
-<li><strong>Compétence du Patron</strong>nbsp;Occultisme</li>
-<li><strong>Tour de magie de maléfice </strong>@Compendium[pf2e.spells-srd.yp4w9SG4RuqRM8KD]{Animation d'objet}</li>
+<li><strong>Liste de sorts</strong> occulte</li>
+<li><strong>Compétence du Patron</strong> Occultisme</li>
+<li><strong>Tour de magie de maléfice</strong> @Compendium[pf2e.spells-srd.yp4w9SG4RuqRM8KD]{Animation d'objet}</li>
 <li><strong>Sort accordé</strong> @Compendium[pf2e.spells-srd.8TQiFzGf4feoHeH0]{Contact glacial}</li>
 </ul>
