--- a/data/classfeatures/witch-01-XFTWJO6txmLNRLae.htm
+++ b/data/classfeatures/witch-01-XFTWJO6txmLNRLae.htm
@@ -1,7 +1,6 @@
 Name: Night Patron
 Nom: Patron : Nuit
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Your patron speaks from the shadows, granting you power over darkness and dreams.</p>
