--- a/data/classfeatures/witch-01-nocYmxbi4rqCC2qS.htm
+++ b/data/classfeatures/witch-01-nocYmxbi4rqCC2qS.htm
@@ -1,7 +1,6 @@
 Name: Patron Theme
 Nom: Thême de patron
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Each patron has a theme, regardless of their nature or identity. This theme describes the forces over which the patron grants a witch influence. Some patrons are multifaceted, granting different themes and teaching different lessons to different witches. Your patron's theme determines the following.</p>
