--- a/data/classfeatures/witch-01-qMZiTugiLCEmkg8h.htm
+++ b/data/classfeatures/witch-01-qMZiTugiLCEmkg8h.htm
@@ -1,7 +1,6 @@
 Name: Fate Patron
 Nom: Patron : Destin
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Through your patron, you gain glimpses of the future and insight into the ever-woven tapestry of time.</p>
