--- a/data/classfeatures/witch-01-qf12ubZ07Q0z0NcN.htm
+++ b/data/classfeatures/witch-01-qf12ubZ07Q0z0NcN.htm
@@ -1,7 +1,6 @@
 Name: Winter Patron
 Nom: Patron : Hiver
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>The wild places of the world feel the touch of your patron.</p>
