--- a/data/classfeatures/witch-01-KPtF29AaeX2sJW0K.htm
+++ b/data/classfeatures/witch-01-KPtF29AaeX2sJW0K.htm
@@ -21,3 +21,13 @@ Nom: Patron
 <p>Vous n’êtes pas née avec la capacité de lancer des sorts, et vous n’avez pas non plus dévoué plusieurs années à étudier des tomes ni à approfondir votre dévotion envers des dieux ou des secrets mystiques. Vos pouvoirs proviennent d’une puissante entité qui vous a choisie comme réceptacle pour faire avancer ses objectifs dans le monde. Cette entité est généralement mystérieuse et distante et ne révèle que peu de choses à propos de son identité et de ses motivations. Elle vous octroie des sorts et d’autres pouvoirs magiques grâce à un familier qui sert d’intermédiaire pour leur pouvoir.</p>
 <p>Un patron pourrait être une divinité ou un demi-dieu, un conclave de puissantes guenaudes, un Seigneur-fée, un archidiable ou une autre entité de même niveau de puissance, voire même plusieurs entités similaires oeuvrant de concert. En acquérant de plus en plus de pouvoirs de la part de votre patron, vous pourriez en apprendre plus sur leur identité (certaines combinaisons de thèmes et de leçons suggèrent des patrons ou des objectifs spécifiques) mais les patrons accordent leurs pouvoirs à des sorcières pour des raisons secrètes qu’ils ne révèlent que très rarement en entier.</p>
 <p>Au niveau 1, choisissez le thème de votre patron, qui détermine votre tradition de lanceur de sorts, une compétence, un tour de magie spécifique que vous obtenez et un sort qui est ajouté à votre familier.</p>
+<ul>
+<li>@Compendium[pf2e.classfeatures.qMZiTugiLCEmkg8h]{Destin}</li>
+<li>@Compendium[pf2e.classfeatures.4IfYHrQMosJNM8hv]{Ferveur}</li>
+<li>@Compendium[pf2e.classfeatures.qf12ubZ07Q0z0NcN]{Hiver}</li>
+<li>@Compendium[pf2e.classfeatures.NAXRmMjj0gcyD7ie]{Malédiction}</li>
+<li>@Compendium[pf2e.classfeatures.XFTWJO6txmLNRLae]{Nuit}</li>
+<li>@Compendium[pf2e.classfeatures.VVMMJdIWL7fAsQf3]{Patron Baba Yaga}</li>
+<li>@Compendium[pf2e.classfeatures.ejmSQOJR5lJv1pzh]{Rune}</li>
+<li>@Compendium[pf2e.classfeatures.x2gzQMPvLwHWDdAC]{Sauvage}</li>
+</ul>
