--- a/data/classfeatures/witch-01-x2gzQMPvLwHWDdAC.htm
+++ b/data/classfeatures/witch-01-x2gzQMPvLwHWDdAC.htm
@@ -1,7 +1,6 @@
 Name: Wild Patron
 Nom: Patron : Sauvage
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>The wild places of the world feel the touch of your patron.</p>
@@ -11,7 +10,9 @@ Nom: Patron : Sauvage
 <p><strong>Granted Spell</strong> Your choice of @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Summon Animal}, or @Compendium[pf2e.spells-srd.jSRAyd57kd4WZ4yE]{Summon Plant or Fungus}</p>
 ------ Description (fr) ------
 <p>Les endroits sauvages du monde sont sensibles à l’influence de votre patron.</p>
-<p><strong>Liste de sorts</strong> primordial</p>
-<p><strong>Compétence de Patron</strong> Nature</p>
-<p><strong>Tour de magie de maléfice</strong> @Compendium[pf2e.spells-srd.GdN5YQE47gd79k7X]{Paroles sauvages}</p>
-<p><strong>Sort accordé</strong> Vous avez le choix entre @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Convocation d'animal} ou @Compendium[pf2e.spells-srd.jSRAyd57kd4WZ4yE]{Convocation de plante ou de champignon}</p>
+<ul>
+<li><strong>Liste de sorts</strong> primordial</li>
+<li><strong>Compétence de Patron</strong> Nature</li>
+<li><strong>Tour de magie de maléfice</strong> @Compendium[pf2e.spells-srd.GdN5YQE47gd79k7X]{Paroles sauvages}</li>
+<li><strong>Sort accordé</strong> Vous avez le choix entre @Compendium[pf2e.spells-srd.4YnON9JHYqtLzccu]{Convocation d'animal} ou @Compendium[pf2e.spells-srd.jSRAyd57kd4WZ4yE]{Convocation de plante ou de champignon}</li>
+</ul>
