--- a/data/equipment/equipment-13-keFeNqSR7W35aCeT.htm
+++ b/data/equipment/equipment-13-keFeNqSR7W35aCeT.htm
@@ -1,5 +1,5 @@
 Name: Blightburn Ward
-Nom: Protection du Champibrûle
+Nom: Protection de la maladie du Champibrûle
 État: libre
 
 ------ Description (en) ------
